[gd_scene load_steps=3 format=2]

[ext_resource path="res://textures/UIBackgroundGradient.png" type="Texture" id=1]
[ext_resource path="res://UI/StartUI.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1131.0
texture = ExtResource( 1 )
expand = true

[node name="PressStart" type="Button" parent="."]
margin_left = 770.0
margin_top = 830.0
margin_right = 850.0
margin_bottom = 850.0
rect_scale = Vector2( 4.649, 3.237 )
text = "Press Start"

[node name="Menu" type="Control" parent="."]
visible = false
margin_left = 799.0
margin_top = 799.0
margin_right = 1136.0
margin_bottom = 1043.0

[node name="Start" type="Button" parent="Menu"]
margin_left = 34.0
margin_top = 33.0
margin_right = 117.0
margin_bottom = 53.0
rect_scale = Vector2( 3.024, 2.953 )
focus_neighbour_top = NodePath(".")
focus_neighbour_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../Quit")
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Menu"]
margin_left = 34.0
margin_top = 143.0
margin_right = 117.0
margin_bottom = 163.0
rect_scale = Vector2( 3.024, 2.953 )
focus_neighbour_top = NodePath("../Start")
focus_neighbour_bottom = NodePath("../Start")
focus_next = NodePath("../Start")
focus_previous = NodePath("../Start")
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="PressStart" to="." method="_on_PressStart_button_up"]
[connection signal="button_up" from="Menu/Start" to="." method="_on_Start_button_up"]
[connection signal="button_up" from="Menu/Quit" to="." method="_on_Quit_button_up"]
